pcan-basic-sys/src/bindings.rs

#[test]
fn bindgen_test_layout_tagTPCANMsgFD() {
    assert_eq!(
        ::std::mem::size_of::<tagTPCANMsgFD>(),
        72usize,
        concat!("Size of: ", stringify!(tagTPCANMsgFD))
    );
    assert_eq!(
        ::std::mem::align_of::<tagTPCANMsgFD>(),
        4usize,
        concat!("Alignment of ", stringify!(tagTPCANMsgFD))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTPCANMsgFD>())).ID as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTPCANMsgFD),
            "::",
            stringify!(ID)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTPCANMsgFD>())).MSGTYPE as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTPCANMsgFD),
            "::",
            stringify!(MSGTYPE)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTPCANMsgFD>())).DLC as *const _ as usize },
        5usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTPCANMsgFD),
            "::",
            stringify!(DLC)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<tagTPCANMsgFD>())).DATA as *const _ as usize },
        6usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTPCANMsgFD),
            "::",
            stringify!(DATA)
        )
    );
}
pub type TPCANMsgFD = tagTPCANMsgFD;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct tagTPCANChannelInformation {
    pub channel_handle: WORD,
    pub device_type: BYTE,
    pub controller_number: BYTE,
    pub device_features: DWORD,
    pub device_name: [::std::os::raw::c_char; 33usize],
    pub device_id: DWORD,
    pub channel_condition: DWORD,
}
#[test]
fn bindgen_test_layout_tagTPCANChannelInformation() {
    assert_eq!(
        ::std::mem::size_of::<tagTPCANChannelInformation>(),
        52usize,
        concat!("Size of: ", stringify!(tagTPCANChannelInformation))
    );
    assert_eq!(
        ::std::mem::align_of::<tagTPCANChannelInformation>(),
        4usize,
        concat!("Alignment of ", stringify!(tagTPCANChannelInformation))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<tagTPCANChannelInformation>())).channel_handle as *const _
                as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTPCANChannelInformation),
            "::",
            stringify!(channel_handle)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<tagTPCANChannelInformation>())).device_type as *const _ as usize
        },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTPCANChannelInformation),
            "::",
            stringify!(device_type)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<tagTPCANChannelInformation>())).controller_number as *const _
                as usize
        },
        3usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTPCANChannelInformation),
            "::",
            stringify!(controller_number)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<tagTPCANChannelInformation>())).device_features as *const _
                as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTPCANChannelInformation),
            "::",
            stringify!(device_features)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<tagTPCANChannelInformation>())).device_name as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTPCANChannelInformation),
            "::",
            stringify!(device_name)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<tagTPCANChannelInformation>())).device_id as *const _ as usize
        },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTPCANChannelInformation),
            "::",
            stringify!(device_id)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<tagTPCANChannelInformation>())).channel_condition as *const _
                as usize
        },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(tagTPCANChannelInformation),
            "::",
            stringify!(channel_condition)
        )
    );
}
pub type TPCANChannelInformation = tagTPCANChannelInformation;
extern "C" {
    #[doc = " <summary>"]
    #[doc = " Initializes a PCAN Channel"]
    #[doc = " </summary>"]
    #[doc = " <param name=\"Channel\">\"The handle of a PCAN Channel\"</param>"]
    #[doc = " <param name=\"Btr0Btr1\">\"The speed for the communication (BTR0BTR1 code)\"</param>"]
    #[doc = " <param name=\"HwType\">\"Non-PnP: The type of hardware and operation mode\"</param>"]
    #[doc = " <param name=\"IOPort\">\"Non-PnP: The I/O address for the parallel port\"</param>"]
    #[doc = " <param name=\"Interrupt\">\"Non-PnP: Interrupt number of the parallel port\"</param>"]
    #[doc = " <returns>\"A TPCANStatus error code\"</returns>"]
    pub fn CAN_Initialize(
        Channel: WORD,
        Btr0Btr1: WORD,
        HwType: BYTE,
        IOPort: DWORD,
        Interrupt: WORD,
    ) -> DWORD;
}
extern "C" {
    #[doc = " <example>f_clock=80000000,nom_brp=10,nom_tseg1=5,nom_tseg2=2,nom_sjw=1,data_brp=4,data_tseg1=7,data_tseg2=2,data_sjw=1</example>"]
    #[doc = " <returns>\"A TPCANStatus error code\"</returns>"]
    pub fn CAN_InitializeFD(Channel: WORD, BitrateFD: LPSTR) -> DWORD;
}
extern "C" {
    #[doc = " <summary>"]
    #[doc = " Uninitializes one or all PCAN Channels initialized by CAN_Initialize"]
    #[doc = " </summary>"]
    #[doc = " <remarks>Giving the TPCANHandle value \"PCAN_NONEBUS\","]
    #[doc = " uninitialize all initialized channels</remarks>"]
    #[doc = " <param name=\"Channel\">\"The handle of a PCAN Channel\"</param>"]
    #[doc = " <returns>\"A TPCANStatus error code\"</returns>"]
    pub fn CAN_Uninitialize(Channel: WORD) -> DWORD;
}
extern "C" {
    #[doc = " <summary>"]
    #[doc = " Resets the receive and transmit queues of the PCAN Channel"]
    #[doc = " </summary>"]
    #[doc = " <remarks>"]
    #[doc = " A reset of the CAN controller is not performed."]
    #[doc = " </remarks>"]
    #[doc = " <param name=\"Channel\">\"The handle of a PCAN Channel\"</param>"]
    #[doc = " <returns>\"A TPCANStatus error code\"</returns>"]
    pub fn CAN_Reset(Channel: WORD) -> DWORD;
}
extern "C" {
    #[doc = " <summary>"]
    #[doc = " Gets the current status of a PCAN Channel"]
    #[doc = " </summary>"]
    #[doc = " <param name=\"Channel\">\"The handle of a PCAN Channel\"</param>"]
    #[doc = " <returns>\"A TPCANStatus error code\"</returns>"]
    pub fn CAN_GetStatus(Channel: WORD) -> DWORD;
}
extern "C" {
    #[doc = " <summary>"]
    #[doc = " Reads a CAN message from the receive queue of a PCAN Channel"]
    #[doc = " </summary>"]
    #[doc = " <param name=\"Channel\">\"The handle of a PCAN Channel\"</param>"]
    #[doc = " <param name=\"MessageBuffer\">\"A TPCANMsg structure buffer to store the CAN message\"</param>"]
    #[doc = " <param name=\"TimestampBuffer\">\"A TPCANTimestamp structure buffer to get"]
    #[doc = " the reception time of the message. If this value is not desired, this parameter"]
    #[doc = " should be passed as NULL\"</param>"]
    #[doc = " <returns>\"A TPCANStatus error code\"</returns>"]
    pub fn CAN_Read(
        Channel: WORD,
        MessageBuffer: *mut TPCANMsg,
        TimestampBuffer: *mut TPCANTimestamp,
    ) -> DWORD;
}
extern "C" {
    #[doc = " <summary>"]
    #[doc = " Reads a CAN message from the receive queue of a FD capable PCAN Channel"]
    #[doc = " </summary>"]
    #[doc = " <param name=\"Channel\">\"The handle of a FD capable PCAN Channel\"</param>"]
    #[doc = " <param name=\"MessageBuffer\">\"A TPCANMsgFD structure buffer to store the CAN message\"</param>"]
    #[doc = " <param name=\"TimestampBuffer\">\"A TPCANTimestampFD buffer to get"]
    #[doc = " the reception time of the message. If this value is not desired, this parameter"]
    #[doc = " should be passed as NULL\"</param>"]
    #[doc = " <returns>\"A TPCANStatus error code\"</returns>"]
    pub fn CAN_ReadFD(
        Channel: WORD,
        MessageBuffer: *mut TPCANMsgFD,
        TimestampBuffer: *mut UINT64,
    ) -> DWORD;
}
extern "C" {
    #[doc = " <summary>"]
    #[doc = " Transmits a CAN message"]
    #[doc = " </summary>"]
    #[doc = " <param name=\"Channel\">\"The handle of a PCAN Channel\"</param>"]
    #[doc = " <param name=\"MessageBuffer\">\"A TPCANMsg buffer with the message to be sent\"</param>"]
    #[doc = " <returns>\"A TPCANStatus error code\"</returns>"]
    pub fn CAN_Write(Channel: WORD, MessageBuffer: *mut TPCANMsg) -> DWORD;
}
extern "C" {
    #[doc = " <summary>"]
    #[doc = " Transmits a CAN message over a FD capable PCAN Channel"]
    #[doc = " </summary>"]
    #[doc = " <param name=\"Channel\">\"The handle of a FD capable PCAN Channel\"</param>"]
    #[doc = " <param name=\"MessageBuffer\">\"A TPCANMsgFD buffer with the message to be sent\"</param>"]
    #[doc = " <returns>\"A TPCANStatus error code\"</returns>"]
    pub fn CAN_WriteFD(Channel: WORD, MessageBuffer: *mut TPCANMsgFD) -> DWORD;
}
extern "C" {
    #[doc = " <summary>"]
    #[doc = " Configures the reception filter."]
    #[doc = " </summary>"]
    #[doc = " <remarks>The message filter will be expanded with every call to"]
    #[doc = " this function. If it is desired to reset the filter, please use"]
    #[doc = " the CAN_SetValue function</remarks>"]
    #[doc = " <param name=\"Channel\">\"The handle of a PCAN Channel\"</param>"]
    #[doc = " <param name=\"FromID\">\"The lowest CAN ID to be received\"</param>"]
    #[doc = " <param name=\"ToID\">\"The highest CAN ID to be received\"</param>"]
    #[doc = " <param name=\"Mode\">\"Message type, Standard (11-bit identifier) or"]
    #[doc = " Extended (29-bit identifier)\"</param>"]
    #[doc = " <returns>\"A TPCANStatus error code\"</returns>"]
    pub fn CAN_FilterMessages(Channel: WORD, FromID: DWORD, ToID: DWORD, Mode: BYTE) -> DWORD;
}
extern "C" {
    #[doc = " <summary>"]
    #[doc = " Retrieves a PCAN Channel value"]
    #[doc = " </summary>"]
    #[doc = " <remarks>Parameters can be present or not according with the kind"]
    #[doc = " of Hardware (PCAN Channel) being used. If a parameter is not available,"]
    #[doc = " a PCAN_ERROR_ILLPARAMTYPE error will be returned</remarks>"]
    #[doc = " <param name=\"Channel\">\"The handle of a PCAN Channel\"</param>"]
    #[doc = " <param name=\"Parameter\">\"The TPCANParameter parameter to get\"</param>"]
    #[doc = " <param name=\"Buffer\">\"Buffer for the parameter value\"</param>"]
    #[doc = " <param name=\"BufferLength\">\"Size in bytes of the buffer\"</param>"]
    #[doc = " <returns>\"A TPCANStatus error code\"</returns>"]
    pub fn CAN_GetValue(
        Channel: WORD,
        Parameter: BYTE,
        Buffer: *mut ::std::os::raw::c_void,
        BufferLength: DWORD,
    ) -> DWORD;
}
